# inzynierka_backend

./: .dockerignore  .gitignore  Dockerfile  docker-compose.example.yml  docker-compose.yml  docker.env.example  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  tests.py  views.py
chat/migrations/: 0001_initial.py  0002_auto_20200525_1326.py  0003_message_sender.py  0004_auto_20200525_1447.py
core/: permissions.py  responses.py  tests.py  tests_utils.py  utils.py
grouper/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
groups/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
groups/migrations/: 0001_initial.py  0002_auto_20200412_1429.py  0002_auto_20200528_2133.py  0003_auto_20200412_1519.py  0003_auto_20200528_2134.py  0004_auto_20200519_1511.py
nginx/: nginx.conf
posts/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
posts/migrations/: 0001_initial.py  0002_auto_20200519_1441.py  0002_auto_20200528_2229.py  0003_auto_20200530_1652.py
users/: models.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20200912_1513.py  0002_user_lecturer.py  0003_auto_20200412_1429.py  0004_remove_user_staff.py  0005_user_image.py  0006_auto_20200519_1505.py
utils/: token_auth_middleware.py
